# ChangeLog for net-misc/openssh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.488 2013/11/09 23:08:03 radhermit Exp $

  09 Nov 2013; Tim Harder <radhermit@gentoo.org> -openssh-6.4_p1.ebuild:
  Remove insecure version due to improperly using the 6.3_p1 tarball.

*openssh-6.4_p1-r1 (09 Nov 2013)

  09 Nov 2013; Tim Harder <radhermit@gentoo.org> +openssh-6.4_p1-r1.ebuild,
  +files/openssh-6.4_p1-x509-glue.patch:
  Update x509 patch.

*openssh-6.4_p1 (09 Nov 2013)

  09 Nov 2013; Robin H. Johnson <robbat2@gentoo.org> +openssh-6.4_p1.ebuild:
  Add real OpenSSH-6.4p1 release (nearly identical to 6.3, just with the AES-GCM
  fix).

  08 Nov 2013; Tim Harder <radhermit@gentoo.org> -openssh-6.2_p2-r3.ebuild,
  -openssh-6.2_p2-r4.ebuild:
  Remove insecure versions.

*openssh-6.2_p2-r5 (08 Nov 2013)

  08 Nov 2013; Tim Harder <radhermit@gentoo.org> +openssh-6.2_p2-r5.ebuild:
  Apply AES-GCM cipher patch for the 6.2 series (bug #490728).

  08 Nov 2013; Tim Harder <radhermit@gentoo.org> -openssh-6.3_p1.ebuild:
  Remove insecure version.

*openssh-6.3_p1-r1 (08 Nov 2013)

  08 Nov 2013; Tim Harder <radhermit@gentoo.org> +openssh-6.3_p1-r1.ebuild,
  +files/openssh-6.3_p1-aes-gcm.patch:
  Apply patch to fix a memory corruption vulnerability with the AES-GCM cipher
  (bug #490728).

*openssh-6.3_p1 (05 Nov 2013)

  05 Nov 2013; Tim Harder <radhermit@gentoo.org> +openssh-6.3_p1.ebuild,
  +files/openssh-6.3_p1-x509-glue.patch,
  +files/openssh-6.3_p1-x509-hpn14v2-glue.patch:
  Version bump (bug #488482).

*openssh-6.2_p2-r4 (15 Aug 2013)

  15 Aug 2013; Tim Harder <radhermit@gentoo.org> +openssh-6.2_p2-r4.ebuild,
  +files/openssh-6.2_p2-x509-hpn14v1-glue.patch:
  Update to hpn14v1 patch that fixes the multi-threaded AES-CTR cipher when the
  process forks to the background or when using the rlimit sandbox.

*openssh-6.2_p2-r3 (21 Jul 2013)
